--- a/entry/how-do-you-feel/index.html
+++ b/entry/how-do-you-feel/index.html
@@ -61,7 +61,7 @@
     <canvas id="canvas"></canvas>
 
     <div class="hero">
-        <h1>LET EVERYTHING</br>GO IN HERE</h1>
+        <h1>RELEASE YOUR FEELINGS HERE<br>ONLY ON YOUR DESKTOP</h1>
     </div>
 
 
