--- a/entry/jenny-entry/index.html
+++ b/entry/jenny-entry/index.html
@@ -85,7 +85,7 @@
         <p class="answer">When I see "bad" art, but some people don't believe in it, making me more upset as I try to persuade them.</p>
         <p class="answer">When I sometimes also end up making "bad" art; I get really upset.</p>
         <p id="bottom" class="answer">When I encounter a narcissistic person.</p>
-        <a href="#section" id="trigger-link" aria-hidden="true"></a> <!-- Invisible trigger link -->
+        <a href="#section" id="trigger-link" aria-hidden="true"></a>
         <div id="spacer"></div>
         </div>
 
@@ -93,7 +93,7 @@
             <div class="sticky">
                 <div class="container">
                     <form>
-                        <p class="form-question">WHAT MAKES YOU HAPPY??</p>
+                        <p class="form-question">WHAT MAKES YOU HAPPY?</p>
                         <label class="form-answer">
                             <input type="checkbox" name="happy" value="talk-to-mom">
                             When I talk to my mom about my art, clothing, love life, and how much money I will make in the future.
