--- a/entry/david-entry/index.html
+++ b/entry/david-entry/index.html
@@ -65,7 +65,7 @@
                     <div class="text2"><h1>July 13th, 2004</h1></div>
                     <div class="text3"><h1>Seoul, SK</h1></div>
                     <div class="text4"><h1>Studying Communication Design</h1></div>
-                    <div class="text5"><h1>Sleeping, Working, Anything</h1></div>
+                    <div class="text5"><h1>Sleeping, Working, Probably Anything</h1></div>
                 </div>
                 <div class="line">CAN YOU</div>
                 <div class="line">FEEL DAVID</div>
@@ -85,7 +85,7 @@
         <p class="answer">When I try everything in my ability and it still goes wrong, the opposite of what makes me genuinely happy.</p>
         <p class="answer">When I rush to get somewhere and end up sweating a river, I end up just sweating for 30 minutes after.</p>
         <p id="bottom" class="answer">When I see, hear, smell, or feel something specific and can't unsee, unhear, unsmell, unfeel it.</p>
-        <a href="#section" id="trigger-link" aria-hidden="true"></a> <!-- Invisible trigger link -->
+        <a href="#section" id="trigger-link" aria-hidden="true"></a> 
         <div id="spacer"></div>
         </div>
 
@@ -135,7 +135,7 @@
                             When I see, hear, smell, or feel something specific and can't unsee, unhear, unsmell, unfeel it.
                         </label>
                         <br>
-                        <button type="submit">CAN YOU FEEL JENNY</button>
+                        <button type="submit">CAN YOU FEEL DAVID</button>
                     </form>
                 </div>
             </div>
