--- a/entry/bella-entry/index.html
+++ b/entry/bella-entry/index.html
@@ -74,18 +74,18 @@
 
         <div id="interview">
         <p class="question">What makes you happy?</p>
-        <p class="answer">When I’m eating home food.</p>
-        <p class="answer">When I go to concerts and get to hear my favorite artists live.</p>
-        <p class="answer">When I am around people, my friends, and especially the people I love.</p>
+        <p class="answer">When I go back home in New Jersey and eat home food or when I go home in general.</p>
+        <p class="answer">When I go to concerts and get to hear my favorite artists live, better if I know all of the lyrics.</p>
+        <p class="answer">When I'm around people, my friends, and especially the people I love.</p>
         <p class="question">What makes you sad?</p>
-        <p class="answer">When I’m alone too long in my head.</p>
-        <p class="answer">When I finish a show I’ve been watching for a while.</p>
-        <p class="answer">When I listen to depressing music.</p>
+        <p class="answer">When I’m alone too long and end up thinking too much, just being stuck inside my head.</p>
+        <p class="answer">When I finish a show I’ve been watching for a while, especailly when its something I binged in a week or so.</p>
+        <p class="answer">When I listen to music that puts me into sad mood; sometimes it intensifies my emotions.</p>
         <p class="question">What makes you angry?</p>
-        <p class="answer"> When I wash my hair and it dries wrong, that ruins my day.</p>
-        <p class="answer">When I spend hours on my work and it doesn’t save.</p>
-        <p id="bottom" class="answer">When I have to citibike.</p>
-        <a href="#section" id="trigger-link" aria-hidden="true"></a> <!-- Invisible trigger link -->
+        <p class="answer">When I wash my hair and it dries wrong, that genuinely ruins my day.</p>
+        <p class="answer">When I spend hours on my work and it doesn’t save on my desktop.</p>
+        <p id="bottom" class="answer">When I have to Citi Bike, Mariska and David always force me to bike.</p>
+        <a href="#section" id="trigger-link" aria-hidden="true"></a> 
         <div id="spacer"></div>
         </div>
 
@@ -93,46 +93,46 @@
             <div class="sticky">
                 <div class="container">
                     <form>
-                        <p class="form-question">WHAT MAKES YOU HAPPY??</p>
+                        <p class="form-question">WHAT MAKES YOU HAPPY?</p>
                         <label class="form-answer">
                             <input type="checkbox" name="happy" value="talk-to-mom">
-                            When I’m eating home food.
+                            When I go back home in New Jersey and eat home food or when I go home in general.
                         </label>
                         <label class="form-answer">
                             <input type="checkbox" name="happy" value="sketch-inspiration">
-                            When I go to concerts and get to hear my favorite artists live.
+                            When I go to concerts and get to hear my favorite artists live, better if I know all of the lyrics.
                         </label>
                         <label class="form-answer">
                             <input type="checkbox" name="happy" value="morning-coffee">
-                            When I am around people, my friends, and especially the people I love.
+                            When I'm around people, my friends, and especially the people I love.
                         </label>
                         <br>
                         <p class="form-question">WHAT MAKES YOU SAD?</p>
                         <label class="form-answer">
                             <input type="checkbox" name="sad" value="sad-songs">
-                            When I’m alone too long in my head.
+                            When I’m alone too long and end up thinking too much, just being stuck inside my head.
                         </label>
                         <label class="form-answer">
                             <input type="checkbox" name="sad" value="uneasy-future">
-                            When I finish a show I’ve been watching for a while.
+                            When I finish a show I’ve been watching for a while, especailly when its something I binged in a week or so.
                         </label>
                         <label class="form-answer">
                             <input type="checkbox" name="sad" value="thinking-about-money">
-                            When I listen to depressing music.
+                            When I listen to music that puts me into sad mood; sometimes it intensifies my emotions.
                         </label>
                         <br>
                         <p class="form-question">WHAT MAKES YOU ANGRY?</p>
                         <label class="form-answer">
                             <input type="checkbox" name="angry" value="bad-art">
-                            When I wash my hair and it dries wrong, that ruins my day.
+                            When I wash my hair and it dries wrong, that genuinely ruins my day.
                         </label>
                         <label class="form-answer">
                             <input type="checkbox" name="angry" value="making-bad-art">
-                            When I spend hours on my work and it doesn’t save.
+                            When I spend hours on my work and it doesn’t save on my desktop.
                         </label>
                         <label class="form-answer">
                             <input type="checkbox" name="angry" value="narcissistic-person">
-                            When I have to citibike.
+                            When I have to Citi Bike, Mariska and David always force me to bike.
                         </label>
                         <br>
                         <button type="submit">CAN YOU FEEL BELLA</button>
