--- a/entry/pauline-entry/index.html
+++ b/entry/pauline-entry/index.html
@@ -76,16 +76,16 @@
         <p class="question">What makes you happy?</p>
         <p class="answer">When I find something I lost a while ago in the pocket of my jacket.</p>
         <p class="answer">When I observe my friends talking and laugh with each other.</p>
-        <p class="answer">When I am fully satisfied with my work after putting a lot of time and effort into it.</p>
+        <p class="answer">When I'm fully satisfied with my work after putting a lot of time and effort into it.</p>
         <p class="question">What makes you sad?</p>
         <p class="answer">When I look back and realize I should've appreciated something more.</p>
         <p class="answer">When I watch someone I loved change in a negative way.</p>
         <p class="answer">When I think about my dog being alone in our house for most of the day.</p>
         <p class="question">What makes you angry?</p>
         <p class="answer">When I hear the sound of velcro.</p>
-        <p class="answer">When I am being accused of something I didn't do and I get punished for it.</p>
-        <p id="bottom" class="answer">When I am unable to forgive someone even though they've apologized and changed.</p>
-        <a href="#section" id="trigger-link" aria-hidden="true"></a> <!-- Invisible trigger link -->
+        <p class="answer">When I'm being accused of something I didn't do and I get punished for it.</p>
+        <p id="bottom" class="answer">When I'm unable to forgive someone even though they've apologized and changed.</p>
+        <a href="#section" id="trigger-link" aria-hidden="true"></a> 
         <div id="spacer"></div>
         </div>
 
@@ -104,7 +104,7 @@
                         </label>
                         <label class="form-answer">
                             <input type="checkbox" name="happy" value="morning-coffee">
-                            When I am fully satisfied with my work after putting a lot of time and effort into it.
+                            When I'm fully satisfied with my work after putting a lot of time and effort into it.
                         </label>
                         <br>
                         <p class="form-question">WHAT MAKES YOU SAD?</p>
@@ -128,11 +128,11 @@
                         </label>
                         <label class="form-answer">
                             <input type="checkbox" name="angry" value="making-bad-art">
-                            When I am being accused of something I didn't do and I get punished for it.                        
+                            When I'm being accused of something I didn't do and I get punished for it.                        
                         </label>
                         <label class="form-answer">
                             <input type="checkbox" name="angry" value="narcissistic-person">
-                            When I am unable to forgive someone even though they've apologized and changed.
+                            When I'm unable to forgive someone even though they've apologized and changed.
                         </label>
                         <br>
                         <button type="submit">CAN YOU FEEL PAULINE</button>
