--- a/entry/diego-entry/index.html
+++ b/entry/diego-entry/index.html
@@ -74,18 +74,18 @@
 
         <div id="interview">
         <p class="question">What makes you happy?</p>
-        <p class="answer">When I am with my friends and family.</p>
+        <p class="answer">When I'm with my friends and family, we don't necessarily need to do anything.</p>
         <p class="answer">When I play sports, whatever it is.</p>
-        <p class="answer">When I learn something new.</p>
+        <p class="answer">When I learn something new, I don't care if the skill I've learned is super useful or not.</p>
         <p class="question">What makes you sad?</p>
         <p class="answer">When Erling Halaand from Manchester City F.C. scores.</p>
         <p class="answer">When I drop a cigarette, I lose it all.</p>
-        <p class="answer">When I forget my lighter when I walk out to smoke.</p>
+        <p class="answer">When I forget my lighter when I walk out to smoke, I just lose all motivation.</p>
         <p class="question">What makes you angry?</p>
         <p class="answer">When I face a picky eater, especially when they are vocal about it.</p>
         <p class="answer">When I face a slow driver on the left lane, switch lanes.</p>
         <p id="bottom" class="answer">When people eat my leftovers I leave in the fridge.</p>
-        <a href="#section" id="trigger-link" aria-hidden="true"></a> <!-- Invisible trigger link -->
+        <a href="#section" id="trigger-link" aria-hidden="true"></a> 
         <div id="spacer"></div>
         </div>
 
@@ -96,7 +96,7 @@
                         <p class="form-question">WHAT MAKES YOU HAPPY??</p>
                         <label class="form-answer">
                             <input type="checkbox" name="happy" value="talk-to-mom">
-                            When I am with my friends and family.                        
+                            When I'm with my friends and family, we don't necessarily need to do anything.                       
                         </label>
                         <label class="form-answer">
                             <input type="checkbox" name="happy" value="sketch-inspiration">
@@ -104,7 +104,7 @@
                         </label>
                         <label class="form-answer">
                             <input type="checkbox" name="happy" value="morning-coffee">
-                            When I learn something new.
+                            When I learn something new, I don't care if the skill I've learned is super useful or not.
                         </label>
                         <br>
                         <p class="form-question">WHAT MAKES YOU SAD?</p>
@@ -118,7 +118,7 @@
                         </label>
                         <label class="form-answer">
                             <input type="checkbox" name="sad" value="thinking-about-money">
-                            When I forget my lighter when I walk out to smoke.
+                            When I forget my lighter when I walk out to smoke, I just lose all motivation.
                         </label>
                         <br>
                         <p class="form-question">WHAT MAKES YOU ANGRY?</p>
