--- a/entry/mariska-entry/index.html
+++ b/entry/mariska-entry/index.html
@@ -65,7 +65,7 @@
                     <div class="text2"><h1>June 20th, 2005</h1></div>
                     <div class="text3"><h1>Jersey City, NJ</h1></div>
                     <div class="text4"><h1>Studying Strategic Design and Management</h1></div>
-                    <div class="text5"><h1>Walking the Williamsburg Bridge while listening to a new album, exploring places I haven't been and unlocking the map, looking through my camera roll</h1></div>
+                    <div class="text5"><h1>Walking the Williamsburg Bridge, exploring places, looking through photos</h1></div>
                 </div>
                 <div class="line">CAN YOU</div>
                 <div class="line">FEEL MARISKA</div>
@@ -74,7 +74,7 @@
 
         <div id="interview">
         <p class="question">What makes you happy?</p>
-        <p class="answer">When I am in nature with friends; honestly anywhere with the right people works.</p>
+        <p class="answer">When I'm in nature with friends; honestly anywhere with the right people works.</p>
         <p class="answer">When I eat brie, olives, crackers, with topo chico twist of lime while I have music playing.</p>
         <p class="answer">When I meet positive people and just living life with others that also have a positive outlook.</p>
         <p class="question">What makes you sad?</p>
@@ -96,11 +96,11 @@
                         <p class="form-question">WHAT MAKES YOU HAPPY??</p>
                         <label class="form-answer">
                             <input type="checkbox" name="happy" value="talk-to-mom">
-                            When I am in nature with friends; honestly anywhere with the right people works.
+                            When I'm in nature with friends; honestly anywhere with the right people works.
                         </label>
                         <label class="form-answer">
                             <input type="checkbox" name="happy" value="sketch-inspiration">
-                            When I eat brie, olives, crackers, with topo chico twist of lime while I have music playing.
+                            When I eat brie, olives, crackers, with Topo Chico Twist of Lime while I have music playing.
                         </label>
                         <label class="form-answer">
                             <input type="checkbox" name="happy" value="morning-coffee">
