--- a/entry/home-page/index.html
+++ b/entry/home-page/index.html
@@ -74,12 +74,12 @@
         </div>
         <div class="container">
             <ul class="project__list">
-                <li><a class="project" data-image="bella-background copy.png" href="#">Bella Hutabarat</a></li>
-                <li><a class="project" data-image="diego-background copy.png" href="#">Diego Bonilla</a></li>
-                <li><a class="project" data-image="david-background copy.png" href="#">David Lee</a></li>
-                <li><a class="project" data-image="jenny-background copy.png" href="#">Jenny Lee</a></li>
-                <li><a class="project" data-image="mariska-background copy.png" href="#">Mariska Bermudez</a></li>
-                <li><a class="project" data-image="pauline-background copy.png" href="#">Pauline Youm</a></li>
+                <li><a class="project" data-image="bella-background copy.png" href="https://dxxidlee.github.io/canyoufeelme/entry/bella-entry/index.html">Bella Hutabarat</a></li>
+                <li><a class="project" data-image="diego-background copy.png" href="https://dxxidlee.github.io/canyoufeelme/entry/diego-entry/index.html">Diego Bonilla</a></li>
+                <li><a class="project" data-image="david-background copy.png" href="https://dxxidlee.github.io/canyoufeelme/entry/david-entry/index.html">David Lee</a></li>
+                <li><a class="project" data-image="jenny-background copy.png" href="https://dxxidlee.github.io/canyoufeelme/entry/jenny-entry/index.html">Jenny Lee</a></li>
+                <li><a class="project" data-image="mariska-background copy.png" href="https://dxxidlee.github.io/canyoufeelme/entry/mariska-entry/index.html">Mariska Bermudez</a></li>
+                <li><a class="project" data-image="pauline-background copy.png" href="https://dxxidlee.github.io/canyoufeelme/entry/pauline-entry/index.html">Pauline Youm</a></li>
             </ul>
         </div>
     </div>
