--- a/entry/home-page/index.html
+++ b/entry/home-page/index.html
@@ -13,7 +13,7 @@
 
     <div class="marquee-text">
         <div class="marquee-text-track">
-            <span>CAN YOU FEEL ME</span>
+            <span href="">CAN YOU FEEL ME</span>
             <span>HOW DO YOU FEEL</span>
             <span>ABOUT</span>
             <span aria-hidden="true">CAN YOU FEEL ME</span>
