--- a/entry/about-page/index.html
+++ b/entry/about-page/index.html
@@ -11,48 +11,48 @@
     <body>
         <div class="marquee-text">
             <div class="marquee-text-track">
-                <span>CAN YOU FEEL ME</span>
-                <span>HOW DO YOU FEEL</span>
-                <span>ABOUT</span>
-                <span aria-hidden="true">CAN YOU FEEL ME</span>
-                <span aria-hidden="true">HOW DO YOU FEEL</span>
-                <span aria-hidden="true">ABOUT</span>
-                <span>CAN YOU FEEL ME</span>
-                <span>HOW DO YOU FEEL</span>
-                <span>ABOUT</span>
-                <span aria-hidden="true">CAN YOU FEEL ME</span>
-                <span aria-hidden="true">HOW DO YOU FEEL</span>
-                <span aria-hidden="true">ABOUT</span>
-                <span>CAN YOU FEEL ME</span>
-                <span>HOW DO YOU FEEL</span>
-                <span>ABOUT</span>
-                <span aria-hidden="true">CAN YOU FEEL ME</span>
-                <span aria-hidden="true">HOW DO YOU FEEL</span>
-                <span aria-hidden="true">ABOUT</span>
-                <span>CAN YOU FEEL ME</span>
-                <span>HOW DO YOU FEEL</span>
-                <span>ABOUT</span>
-                <span aria-hidden="true">CAN YOU FEEL ME</span>
-                <span aria-hidden="true">HOW DO YOU FEEL</span>
-                <span aria-hidden="true">ABOUT</span>
-                <span>CAN YOU FEEL ME</span>
-                <span>HOW DO YOU FEEL</span>
-                <span>ABOUT</span>
-                <span aria-hidden="true">CAN YOU FEEL ME</span>
-                <span aria-hidden="true">HOW DO YOU FEEL</span>
-                <span aria-hidden="true">ABOUT</span>
-                <span>CAN YOU FEEL ME</span>
-                <span>HOW DO YOU FEEL</span>
-                <span>ABOUT</span>
-                <span aria-hidden="true">CAN YOU FEEL ME</span>
-                <span aria-hidden="true">HOW DO YOU FEEL</span>
-                <span aria-hidden="true">ABOUT</span>
-                <span>CAN YOU FEEL ME</span>
-                <span>HOW DO YOU FEEL</span>
-                <span>ABOUT</span>
-                <span aria-hidden="true">CAN YOU FEEL ME</span>
-                <span aria-hidden="true">HOW DO YOU FEEL</span>
-                <span aria-hidden="true">ABOUT</span>
+                <span href="https://dxxidlee.github.io/canyoufeelme/entry/home-page/index.html">CAN YOU FEEL ME</span>
+                <span href="https://dxxidlee.github.io/canyoufeelme/entry/how-do-you-feel/index.html">HOW DO YOU FEEL</span>
+                <span href="https://dxxidlee.github.io/canyoufeelme/entry/about-page/index.html">ABOUT</span>
+                <span aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/home-page/index.html">CAN YOU FEEL ME</span>
+                <span aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/how-do-you-feel/index.html">HOW DO YOU FEEL</span>
+                <span aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/about-page/index.html">ABOUT</span>
+                <span href="https://dxxidlee.github.io/canyoufeelme/entry/home-page/index.html">CAN YOU FEEL ME</span>
+                <span href="https://dxxidlee.github.io/canyoufeelme/entry/how-do-you-feel/index.html">HOW DO YOU FEEL</span>
+                <span href="https://dxxidlee.github.io/canyoufeelme/entry/about-page/index.html">ABOUT</span>
+                <span aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/home-page/index.html">CAN YOU FEEL ME</span>
+                <span aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/how-do-you-feel/index.html">HOW DO YOU FEEL</span>
+                <span aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/about-page/index.html">ABOUT</span>
+                <span href="https://dxxidlee.github.io/canyoufeelme/entry/home-page/index.html">CAN YOU FEEL ME</span>
+                <span href="https://dxxidlee.github.io/canyoufeelme/entry/how-do-you-feel/index.html">HOW DO YOU FEEL</span>
+                <span href="https://dxxidlee.github.io/canyoufeelme/entry/about-page/index.html">ABOUT</span>
+                <span aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/home-page/index.html">CAN YOU FEEL ME</span>
+                <span aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/how-do-you-feel/index.html">HOW DO YOU FEEL</span>
+                <span aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/about-page/index.html">ABOUT</span>
+                <span href="https://dxxidlee.github.io/canyoufeelme/entry/home-page/index.html">CAN YOU FEEL ME</span>
+                <span href="https://dxxidlee.github.io/canyoufeelme/entry/how-do-you-feel/index.html">HOW DO YOU FEEL</span>
+                <span href="https://dxxidlee.github.io/canyoufeelme/entry/about-page/index.html">ABOUT</span>
+                <span aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/home-page/index.html">CAN YOU FEEL ME</span>
+                <span aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/how-do-you-feel/index.html">HOW DO YOU FEEL</span>
+                <span aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/about-page/index.html">ABOUT</span>
+                <span href="https://dxxidlee.github.io/canyoufeelme/entry/home-page/index.html">CAN YOU FEEL ME</span>
+                <span href="https://dxxidlee.github.io/canyoufeelme/entry/how-do-you-feel/index.html">HOW DO YOU FEEL</span>
+                <span href="https://dxxidlee.github.io/canyoufeelme/entry/about-page/index.html">ABOUT</span>
+                <span aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/home-page/index.html">CAN YOU FEEL ME</span>
+                <span aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/how-do-you-feel/index.html">HOW DO YOU FEEL</span>
+                <span aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/about-page/index.html">ABOUT</span>
+                <span href="https://dxxidlee.github.io/canyoufeelme/entry/home-page/index.html">CAN YOU FEEL ME</span>
+                <span href="https://dxxidlee.github.io/canyoufeelme/entry/how-do-you-feel/index.html">HOW DO YOU FEEL</span>
+                <span href="https://dxxidlee.github.io/canyoufeelme/entry/about-page/index.html">ABOUT</span>
+                <span aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/home-page/index.html">CAN YOU FEEL ME</span>
+                <span aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/how-do-you-feel/index.html">HOW DO YOU FEEL</span>
+                <span aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/about-page/index.html">ABOUT</span>
+                <span href="https://dxxidlee.github.io/canyoufeelme/entry/home-page/index.html">CAN YOU FEEL ME</span>
+                <span href="https://dxxidlee.github.io/canyoufeelme/entry/how-do-you-feel/index.html">HOW DO YOU FEEL</span>
+                <span href="https://dxxidlee.github.io/canyoufeelme/entry/about-page/index.html">ABOUT</span>
+                <span aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/home-page/index.html">CAN YOU FEEL ME</span>
+                <span aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/how-do-you-feel/index.html">HOW DO YOU FEEL</span>
+                <span aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/about-page/index.html">ABOUT</span>
             </div>
         </div>
         
