--- a/entry/home-page/index.html
+++ b/entry/home-page/index.html
@@ -9,54 +9,53 @@
     <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
-<body>
 
-    <div class="marquee-text">
-        <div class="marquee-text-track">
-            <span href="https://dxxidlee.github.io/canyoufeelme/entry/home-page/index.html">CAN YOU FEEL ME</span>
-            <span href="https://dxxidlee.github.io/canyoufeelme/entry/how-do-you-feel/index.html">HOW DO YOU FEEL</span>
-            <span href="https://dxxidlee.github.io/canyoufeelme/entry/about-page/index.html">ABOUT</span>
-            <span aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/home-page/index.html">CAN YOU FEEL ME</span>
-            <span aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/how-do-you-feel/index.html">HOW DO YOU FEEL</span>
-            <span aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/about-page/index.html">ABOUT</span>
-            <span href="https://dxxidlee.github.io/canyoufeelme/entry/home-page/index.html">CAN YOU FEEL ME</span>
-            <span href="https://dxxidlee.github.io/canyoufeelme/entry/how-do-you-feel/index.html">HOW DO YOU FEEL</span>
-            <span href="https://dxxidlee.github.io/canyoufeelme/entry/about-page/index.html">ABOUT</span>
-            <span aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/home-page/index.html">CAN YOU FEEL ME</span>
-            <span aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/how-do-you-feel/index.html">HOW DO YOU FEEL</span>
-            <span aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/about-page/index.html">ABOUT</span>
-            <span href="https://dxxidlee.github.io/canyoufeelme/entry/home-page/index.html">CAN YOU FEEL ME</span>
-            <span href="https://dxxidlee.github.io/canyoufeelme/entry/how-do-you-feel/index.html">HOW DO YOU FEEL</span>
-            <span href="https://dxxidlee.github.io/canyoufeelme/entry/about-page/index.html">ABOUT</span>
-            <span aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/home-page/index.html">CAN YOU FEEL ME</span>
-            <span aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/how-do-you-feel/index.html">HOW DO YOU FEEL</span>
-            <span aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/about-page/index.html">ABOUT</span>
-            <span href="https://dxxidlee.github.io/canyoufeelme/entry/home-page/index.html">CAN YOU FEEL ME</span>
-            <span href="https://dxxidlee.github.io/canyoufeelme/entry/how-do-you-feel/index.html">HOW DO YOU FEEL</span>
-            <span href="https://dxxidlee.github.io/canyoufeelme/entry/about-page/index.html">ABOUT</span>
-            <span aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/home-page/index.html">CAN YOU FEEL ME</span>
-            <span aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/how-do-you-feel/index.html">HOW DO YOU FEEL</span>
-            <span aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/about-page/index.html">ABOUT</span>
-            <span href="https://dxxidlee.github.io/canyoufeelme/entry/home-page/index.html">CAN YOU FEEL ME</span>
-            <span href="https://dxxidlee.github.io/canyoufeelme/entry/how-do-you-feel/index.html">HOW DO YOU FEEL</span>
-            <span href="https://dxxidlee.github.io/canyoufeelme/entry/about-page/index.html">ABOUT</span>
-            <span aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/home-page/index.html">CAN YOU FEEL ME</span>
-            <span aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/how-do-you-feel/index.html">HOW DO YOU FEEL</span>
-            <span aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/about-page/index.html">ABOUT</span>
-            <span href="https://dxxidlee.github.io/canyoufeelme/entry/home-page/index.html">CAN YOU FEEL ME</span>
-            <span href="https://dxxidlee.github.io/canyoufeelme/entry/how-do-you-feel/index.html">HOW DO YOU FEEL</span>
-            <span href="https://dxxidlee.github.io/canyoufeelme/entry/about-page/index.html">ABOUT</span>
-            <span aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/home-page/index.html">CAN YOU FEEL ME</span>
-            <span aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/how-do-you-feel/index.html">HOW DO YOU FEEL</span>
-            <span aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/about-page/index.html">ABOUT</span>
-            <span href="https://dxxidlee.github.io/canyoufeelme/entry/home-page/index.html">CAN YOU FEEL ME</span>
-            <span href="https://dxxidlee.github.io/canyoufeelme/entry/how-do-you-feel/index.html">HOW DO YOU FEEL</span>
-            <span href="https://dxxidlee.github.io/canyoufeelme/entry/about-page/index.html">ABOUT</span>
-            <span aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/home-page/index.html">CAN YOU FEEL ME</span>
-            <span aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/how-do-you-feel/index.html">HOW DO YOU FEEL</span>
-            <span aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/about-page/index.html">ABOUT</span>
-        </div>
+<div class="marquee-text">
+    <div class="marquee-text-track">
+        <a href="https://dxxidlee.github.io/canyoufeelme/entry/home-page/index.html">CAN YOU FEEL ME</a>
+        <a href="https://dxxidlee.github.io/canyoufeelme/entry/how-do-you-feel/index.html">HOW DO YOU FEEL</a>
+        <a href="https://dxxidlee.github.io/canyoufeelme/entry/about-page/index.html">ABOUT</a>
+        <a aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/home-page/index.html">CAN YOU FEEL ME</a>
+        <a aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/how-do-you-feel/index.html">HOW DO YOU FEEL</a>
+        <a aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/about-page/index.html">ABOUT</a>
+        <a href="https://dxxidlee.github.io/canyoufeelme/entry/home-page/index.html">CAN YOU FEEL ME</a>
+        <a href="https://dxxidlee.github.io/canyoufeelme/entry/how-do-you-feel/index.html">HOW DO YOU FEEL</a>
+        <a href="https://dxxidlee.github.io/canyoufeelme/entry/about-page/index.html">ABOUT</a>
+        <a aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/home-page/index.html">CAN YOU FEEL ME</a>
+        <a aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/how-do-you-feel/index.html">HOW DO YOU FEEL</a>
+        <a aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/about-page/index.html">ABOUT</a>
+        <a href="https://dxxidlee.github.io/canyoufeelme/entry/home-page/index.html">CAN YOU FEEL ME</a>
+        <a href="https://dxxidlee.github.io/canyoufeelme/entry/how-do-you-feel/index.html">HOW DO YOU FEEL</a>
+        <a href="https://dxxidlee.github.io/canyoufeelme/entry/about-page/index.html">ABOUT</a>
+        <a aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/home-page/index.html">CAN YOU FEEL ME</a>
+        <a aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/how-do-you-feel/index.html">HOW DO YOU FEEL</a>
+        <a aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/about-page/index.html">ABOUT</a>
+        <a href="https://dxxidlee.github.io/canyoufeelme/entry/home-page/index.html">CAN YOU FEEL ME</a>
+        <a href="https://dxxidlee.github.io/canyoufeelme/entry/how-do-you-feel/index.html">HOW DO YOU FEEL</a>
+        <a href="https://dxxidlee.github.io/canyoufeelme/entry/about-page/index.html">ABOUT</a>
+        <a aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/home-page/index.html">CAN YOU FEEL ME</a>
+        <a aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/how-do-you-feel/index.html">HOW DO YOU FEEL</a>
+        <a aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/about-page/index.html">ABOUT</a>
+        <a href="https://dxxidlee.github.io/canyoufeelme/entry/home-page/index.html">CAN YOU FEEL ME</a>
+        <a href="https://dxxidlee.github.io/canyoufeelme/entry/how-do-you-feel/index.html">HOW DO YOU FEEL</a>
+        <a href="https://dxxidlee.github.io/canyoufeelme/entry/about-page/index.html">ABOUT</a>
+        <a aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/home-page/index.html">CAN YOU FEEL ME</a>
+        <a aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/how-do-you-feel/index.html">HOW DO YOU FEEL</a>
+        <a aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/about-page/index.html">ABOUT</a>
+        <a href="https://dxxidlee.github.io/canyoufeelme/entry/home-page/index.html">CAN YOU FEEL ME</a>
+        <a href="https://dxxidlee.github.io/canyoufeelme/entry/how-do-you-feel/index.html">HOW DO YOU FEEL</a>
+        <a href="https://dxxidlee.github.io/canyoufeelme/entry/about-page/index.html">ABOUT</a>
+        <a aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/home-page/index.html">CAN YOU FEEL ME</a>
+        <a aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/how-do-you-feel/index.html">HOW DO YOU FEEL</a>
+        <a aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/about-page/index.html">ABOUT</a>
+        <a href="https://dxxidlee.github.io/canyoufeelme/entry/home-page/index.html">CAN YOU FEEL ME</a>
+        <a href="https://dxxidlee.github.io/canyoufeelme/entry/how-do-you-feel/index.html">HOW DO YOU FEEL</a>
+        <a href="https://dxxidlee.github.io/canyoufeelme/entry/about-page/index.html">ABOUT</a>
+        <a aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/home-page/index.html">CAN YOU FEEL ME</a>
+        <a aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/how-do-you-feel/index.html">HOW DO YOU FEEL</a>
+        <a aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/about-page/index.html">ABOUT</a>
     </div>
+</div>
 
     <div class="image__wrapper">
          <img src="images/bella-background copy.png" alt="bella">
