--- a/entry/pauline-entry/index.html
+++ b/entry/pauline-entry/index.html
@@ -12,48 +12,48 @@
 
         <div class="marquee-text">
             <div class="marquee-text-track">
-                <span href="https://dxxidlee.github.io/canyoufeelme/entry/home-page/index.html">CAN YOU FEEL ME</span>
-                <span href="https://dxxidlee.github.io/canyoufeelme/entry/how-do-you-feel/index.html">HOW DO YOU FEEL</span>
-                <span href="https://dxxidlee.github.io/canyoufeelme/entry/about-page/index.html">ABOUT</span>
-                <span aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/home-page/index.html">CAN YOU FEEL ME</span>
-                <span aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/how-do-you-feel/index.html">HOW DO YOU FEEL</span>
-                <span aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/about-page/index.html">ABOUT</span>
-                <span href="https://dxxidlee.github.io/canyoufeelme/entry/home-page/index.html">CAN YOU FEEL ME</span>
-                <span href="https://dxxidlee.github.io/canyoufeelme/entry/how-do-you-feel/index.html">HOW DO YOU FEEL</span>
-                <span href="https://dxxidlee.github.io/canyoufeelme/entry/about-page/index.html">ABOUT</span>
-                <span aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/home-page/index.html">CAN YOU FEEL ME</span>
-                <span aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/how-do-you-feel/index.html">HOW DO YOU FEEL</span>
-                <span aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/about-page/index.html">ABOUT</span>
-                <span href="https://dxxidlee.github.io/canyoufeelme/entry/home-page/index.html">CAN YOU FEEL ME</span>
-                <span href="https://dxxidlee.github.io/canyoufeelme/entry/how-do-you-feel/index.html">HOW DO YOU FEEL</span>
-                <span href="https://dxxidlee.github.io/canyoufeelme/entry/about-page/index.html">ABOUT</span>
-                <span aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/home-page/index.html">CAN YOU FEEL ME</span>
-                <span aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/how-do-you-feel/index.html">HOW DO YOU FEEL</span>
-                <span aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/about-page/index.html">ABOUT</span>
-                <span href="https://dxxidlee.github.io/canyoufeelme/entry/home-page/index.html">CAN YOU FEEL ME</span>
-                <span href="https://dxxidlee.github.io/canyoufeelme/entry/how-do-you-feel/index.html">HOW DO YOU FEEL</span>
-                <span href="https://dxxidlee.github.io/canyoufeelme/entry/about-page/index.html">ABOUT</span>
-                <span aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/home-page/index.html">CAN YOU FEEL ME</span>
-                <span aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/how-do-you-feel/index.html">HOW DO YOU FEEL</span>
-                <span aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/about-page/index.html">ABOUT</span>
-                <span href="https://dxxidlee.github.io/canyoufeelme/entry/home-page/index.html">CAN YOU FEEL ME</span>
-                <span href="https://dxxidlee.github.io/canyoufeelme/entry/how-do-you-feel/index.html">HOW DO YOU FEEL</span>
-                <span href="https://dxxidlee.github.io/canyoufeelme/entry/about-page/index.html">ABOUT</span>
-                <span aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/home-page/index.html">CAN YOU FEEL ME</span>
-                <span aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/how-do-you-feel/index.html">HOW DO YOU FEEL</span>
-                <span aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/about-page/index.html">ABOUT</span>
-                <span href="https://dxxidlee.github.io/canyoufeelme/entry/home-page/index.html">CAN YOU FEEL ME</span>
-                <span href="https://dxxidlee.github.io/canyoufeelme/entry/how-do-you-feel/index.html">HOW DO YOU FEEL</span>
-                <span href="https://dxxidlee.github.io/canyoufeelme/entry/about-page/index.html">ABOUT</span>
-                <span aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/home-page/index.html">CAN YOU FEEL ME</span>
-                <span aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/how-do-you-feel/index.html">HOW DO YOU FEEL</span>
-                <span aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/about-page/index.html">ABOUT</span>
-                <span href="https://dxxidlee.github.io/canyoufeelme/entry/home-page/index.html">CAN YOU FEEL ME</span>
-                <span href="https://dxxidlee.github.io/canyoufeelme/entry/how-do-you-feel/index.html">HOW DO YOU FEEL</span>
-                <span href="https://dxxidlee.github.io/canyoufeelme/entry/about-page/index.html">ABOUT</span>
-                <span aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/home-page/index.html">CAN YOU FEEL ME</span>
-                <span aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/how-do-you-feel/index.html">HOW DO YOU FEEL</span>
-                <span aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/about-page/index.html">ABOUT</span>
+                <a href="https://dxxidlee.github.io/canyoufeelme/entry/home-page/index.html">CAN YOU FEEL ME</a>
+                <a href="https://dxxidlee.github.io/canyoufeelme/entry/how-do-you-feel/index.html">HOW DO YOU FEEL</a>
+                <a href="https://dxxidlee.github.io/canyoufeelme/entry/about-page/index.html">ABOUT</a>
+                <a aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/home-page/index.html">CAN YOU FEEL ME</a>
+                <a aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/how-do-you-feel/index.html">HOW DO YOU FEEL</a>
+                <a aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/about-page/index.html">ABOUT</a>
+                <a href="https://dxxidlee.github.io/canyoufeelme/entry/home-page/index.html">CAN YOU FEEL ME</a>
+                <a href="https://dxxidlee.github.io/canyoufeelme/entry/how-do-you-feel/index.html">HOW DO YOU FEEL</a>
+                <a href="https://dxxidlee.github.io/canyoufeelme/entry/about-page/index.html">ABOUT</a>
+                <a aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/home-page/index.html">CAN YOU FEEL ME</a>
+                <a aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/how-do-you-feel/index.html">HOW DO YOU FEEL</a>
+                <a aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/about-page/index.html">ABOUT</a>
+                <a href="https://dxxidlee.github.io/canyoufeelme/entry/home-page/index.html">CAN YOU FEEL ME</a>
+                <a href="https://dxxidlee.github.io/canyoufeelme/entry/how-do-you-feel/index.html">HOW DO YOU FEEL</a>
+                <a href="https://dxxidlee.github.io/canyoufeelme/entry/about-page/index.html">ABOUT</a>
+                <a aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/home-page/index.html">CAN YOU FEEL ME</a>
+                <a aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/how-do-you-feel/index.html">HOW DO YOU FEEL</a>
+                <a aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/about-page/index.html">ABOUT</a>
+                <a href="https://dxxidlee.github.io/canyoufeelme/entry/home-page/index.html">CAN YOU FEEL ME</a>
+                <a href="https://dxxidlee.github.io/canyoufeelme/entry/how-do-you-feel/index.html">HOW DO YOU FEEL</a>
+                <a href="https://dxxidlee.github.io/canyoufeelme/entry/about-page/index.html">ABOUT</a>
+                <a aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/home-page/index.html">CAN YOU FEEL ME</a>
+                <a aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/how-do-you-feel/index.html">HOW DO YOU FEEL</a>
+                <a aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/about-page/index.html">ABOUT</a>
+                <a href="https://dxxidlee.github.io/canyoufeelme/entry/home-page/index.html">CAN YOU FEEL ME</a>
+                <a href="https://dxxidlee.github.io/canyoufeelme/entry/how-do-you-feel/index.html">HOW DO YOU FEEL</a>
+                <a href="https://dxxidlee.github.io/canyoufeelme/entry/about-page/index.html">ABOUT</a>
+                <a aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/home-page/index.html">CAN YOU FEEL ME</a>
+                <a aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/how-do-you-feel/index.html">HOW DO YOU FEEL</a>
+                <a aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/about-page/index.html">ABOUT</a>
+                <a href="https://dxxidlee.github.io/canyoufeelme/entry/home-page/index.html">CAN YOU FEEL ME</a>
+                <a href="https://dxxidlee.github.io/canyoufeelme/entry/how-do-you-feel/index.html">HOW DO YOU FEEL</a>
+                <a href="https://dxxidlee.github.io/canyoufeelme/entry/about-page/index.html">ABOUT</a>
+                <a aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/home-page/index.html">CAN YOU FEEL ME</a>
+                <a aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/how-do-you-feel/index.html">HOW DO YOU FEEL</a>
+                <a aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/about-page/index.html">ABOUT</a>
+                <a href="https://dxxidlee.github.io/canyoufeelme/entry/home-page/index.html">CAN YOU FEEL ME</a>
+                <a href="https://dxxidlee.github.io/canyoufeelme/entry/how-do-you-feel/index.html">HOW DO YOU FEEL</a>
+                <a href="https://dxxidlee.github.io/canyoufeelme/entry/about-page/index.html">ABOUT</a>
+                <a aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/home-page/index.html">CAN YOU FEEL ME</a>
+                <a aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/how-do-you-feel/index.html">HOW DO YOU FEEL</a>
+                <a aria-hidden="true" href="https://dxxidlee.github.io/canyoufeelme/entry/about-page/index.html">ABOUT</a>
             </div>
         </div>
 
