--- a/entry/bella-entry/index.html
+++ b/entry/bella-entry/index.html
@@ -64,7 +64,7 @@
                     <div class="text2"><h1>October 18th, 2004</h1></div>
                     <div class="text3"><h1>Long Island, NY</h1></div>
                     <div class="text4"><h1>Studying Communication Design</h1></div>
-                    <div class="text5"><h1> Drawing, reading books, writing, making music playlists</h1></div>
+                    <div class="text5"><h1> Drawing, reading, writing, making playlists</h1></div>
                 </div>
                 <div class="line">CAN YOU</div>
                 <div class="line">FEEL BELLA</div>
