--- a/entry/mariska-entry/index.html
+++ b/entry/mariska-entry/index.html
@@ -64,7 +64,7 @@
                     <div class="text2"><h1>June 20th, 2005</h1></div>
                     <div class="text3"><h1>Jersey City, NJ</h1></div>
                     <div class="text4"><h1>Studying Strategic Design and Management</h1></div>
-                    <div class="text5"><h1>Walking the Williamsburg Bridge, exploring places, looking through photos</h1></div>
+                    <div class="text5"><h1>Walking the Williamsburg Bridge, exploring places</h1></div>
                 </div>
                 <div class="line">CAN YOU</div>
                 <div class="line">FEEL MARISKA</div>
